feat: add infinite scrolling

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body>
   <header class="initial-header">
-    <a href="#" class="site-logo" aria-label="homepage">All Projects</a>
+    <a href="#" class="site-logo" aria-label="homepage">Intersection</a>
     <nav class="main-nav">
       <ul class="nav__list">
         <li class="nav__list-item"><a href="#" class="nav__link">Home</a></li>
         <li class="nav__list-item">
-          <a href="#" class="nav__link">About</a>
+          <a href="#" class="nav__link">About us</a>
         </li>
         <li class="nav__list-item">
           <a href="#" class="nav__link">Another page</a>
@@ -44,12 +44,12 @@
 
   <main>
     <section class="home-intro">
-      <h1>Intersection Observer is pretty useful</h1>
+      <h1>Welcome to INTERSECTION, most of intersection practice as below</h1>
     </section>
 
     <div class="home-about">
-      <h2>About us</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+      <h2 class="home-about-title">Opacity</h2>
+      <p class="home-about-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       <div class="columns">
         <div class="col fade-in">
           <h3>Lorem, ipsum.</h3>
@@ -76,9 +76,12 @@
     </div>
 
     <div class="home-more-stuff">
+      <div class="home-more-stuff-title">
+        <h2>Fade-in</h2>
+      </div>
       <div class="more-stuff-grid">
-        <img src="https://unsplash.it/400" alt="" class="slide-in from-left" />
-        <p class="slide-in from-right">
+        <img src="https://unsplash.it/400" alt="" class="slide-in from-left image" />
+        <p class="slide-in from-right text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
           quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
           omnis sapiente neque cumque consequuntur reiciendis deserunt.
@@ -87,38 +90,18 @@
         </p>
       </div>
       <div class="more-stuff-grid">
-        <p class="slide-in from-left">
+        <p class="slide-in from-left text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
           quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
           omnis sapiente neque cumque consequuntur reiciendis deserunt.
           Dolorem vero exercitationem consequuntur, eligendi cupiditate
           debitis facilis quibusdam magni. Eveniet.
         </p>
-        <img src="https://unsplash.it/407" alt="" class="slide-in from-right" />
+        <img src="https://unsplash.it/407" alt="" class="slide-in from-right image" />
       </div>
       <div class="more-stuff-grid">
-        <img src="//unsplash.it/400" alt="" class="slide-in from-left" />
-        <p class="slide-in from-right">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-          quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-          omnis sapiente neque cumque consequuntur reiciendis deserunt.
-          Dolorem vero exercitationem consequuntur, eligendi cupiditate
-          debitis facilis quibusdam magni. Eveniet.
-        </p>
-      </div>
-      <div class="more-stuff-grid">
-        <p class="slide-in from-left">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-          quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-          omnis sapiente neque cumque consequuntur reiciendis deserunt.
-          Dolorem vero exercitationem consequuntur, eligendi cupiditate
-          debitis facilis quibusdam magni. Eveniet.
-        </p>
-        <img src="https://unsplash.it/401" alt="" class="slide-in from-right" />
-      </div>
-      <div class="more-stuff-grid">
-        <img src="//unsplash.it/403" alt="" class="slide-in from-left" />
-        <p class="slide-in from-right">
+        <img src="//unsplash.it/400" alt="" class="slide-in from-left image" />
+        <p class="slide-in from-right text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
           quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
           omnis sapiente neque cumque consequuntur reiciendis deserunt.
@@ -127,69 +110,102 @@
         </p>
       </div>
       <div class="more-stuff-grid">
-        <p class="slide-in from-left">
+        <p class="slide-in from-left text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+          quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+          omnis sapiente neque cumque consequuntur reiciendis deserunt.
+          Dolorem vero exercitationem consequuntur, eligendi cupiditate
+          debitis facilis quibusdam magni. Eveniet.
+        </p>
+        <img src="https://unsplash.it/401" alt="" class="slide-in from-right image" />
+      </div>
+      <div class="more-stuff-grid">
+        <img src="//unsplash.it/403" alt="" class="slide-in from-left image" />
+        <p class="slide-in from-right text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+          quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+          omnis sapiente neque cumque consequuntur reiciendis deserunt.
+          Dolorem vero exercitationem consequuntur, eligendi cupiditate
+          debitis facilis quibusdam magni. Eveniet.
+        </p>
+      </div>
+      <div class="more-stuff-grid">
+        <p class="slide-in from-left text">
           HLorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
           quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
           omnis sapiente neque cumque consequuntur reiciendis deserunt.
           Dolorem vero exercitationem consequuntur, eligendi cupiditate
           debitis facilis quibusdam magni. Eveniet.
         </p>
-        <img src="https://unsplash.it/402" alt="" class="slide-in from-right" />
+        <img src="https://unsplash.it/402" alt="" class="slide-in from-right image" />
       </div>
     </div>
   </main>
-  <div class="col-12 mb-5 lazy-load">
-    <p class="slide-in left-item text-item">
-      HLorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-      quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-      omnis sapiente neque cumque consequuntur reiciendis deserunt.
-      Dolorem vero exercitationem consequuntur, eligendi cupiditate
-      debitis facilis quibusdam magni. Eveniet.
-    </p>
-    <img class="lazy right-item" data-src="https://unsplash.it/420">
-  </div>
-  <div class="lazy-load">
-    <img class="lazy left-item" data-src="https://unsplash.it/421">
-    <p class="slide-in right-item text-item">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-      quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-      omnis sapiente neque cumque consequuntur reiciendis deserunt.
-      Dolorem vero exercitationem consequuntur, eligendi cupiditate
-      debitis facilis quibusdam magni. Eveniet.
-    </p>
-  </div>
-  <div class="lazy-load">
-    <p class="slide-in left-item text-item">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-      quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-      omnis sapiente neque cumque consequuntur reiciendis deserunt.
-      Dolorem vero exercitationem consequuntur, eligendi cupiditate
-      debitis facilis quibusdam magni. Eveniet.
-    </p>
-    <img class="lazy right-item" data-src="https://unsplash.it/400">
-  </div>
-  <div class="lazy-load">
-    <img class="lazy left-item" data-src="https://unsplash.it/411">
-    <p class="slide-in right-item text-item">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-      quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-      omnis sapiente neque cumque consequuntur reiciendis deserunt.
-      Dolorem vero exercitationem consequuntur, eligendi cupiditate
-      debitis facilis quibusdam magni. Eveniet.
-    </p>
+
+  <div class="lazy-load-wrapper">
+    <div class="lazy-load-title">
+      <h2>Lazy load</h2>
+    </div>
+    <div class="lazy-load">
+      <p class="slide-in left-item text-item text">
+        HLorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+        quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+        omnis sapiente neque cumque consequuntur reiciendis deserunt.
+        Dolorem vero exercitationem consequuntur, eligendi cupiditate
+        debitis facilis quibusdam magni. Eveniet.
+      </p>
+      <img class="lazy right-item image" data-src="https://unsplash.it/420">
+    </div>
+    <div class="lazy-load">
+      <img class="lazy left-item image" data-src="https://unsplash.it/421">
+      <p class="slide-in right-item text-item text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+        quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+        omnis sapiente neque cumque consequuntur reiciendis deserunt.
+        Dolorem vero exercitationem consequuntur, eligendi cupiditate
+        debitis facilis quibusdam magni. Eveniet.
+      </p>
+    </div>
+    <div class="lazy-load">
+      <p class="slide-in left-item text-item text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+        quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+        omnis sapiente neque cumque consequuntur reiciendis deserunt.
+        Dolorem vero exercitationem consequuntur, eligendi cupiditate
+        debitis facilis quibusdam magni. Eveniet.
+      </p>
+      <img class="lazy right-item image" data-src="https://unsplash.it/400">
+    </div>
+    <div class="lazy-load">
+      <img class="lazy left-item image" data-src="https://unsplash.it/411">
+      <p class="slide-in right-item text-item text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+        quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+        omnis sapiente neque cumque consequuntur reiciendis deserunt.
+        Dolorem vero exercitationem consequuntur, eligendi cupiditate
+        debitis facilis quibusdam magni. Eveniet.
+      </p>
+    </div>
+    <div class="lazy-load">
+      <p class="slide-in left-item text-item text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
+        quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
+        omnis sapiente neque cumque consequuntur reiciendis deserunt.
+        Dolorem vero exercitationem consequuntur, eligendi cupiditate
+        debitis facilis quibusdam magni. Eveniet.
+      </p>
+      <iframe frameborder="0" class="lazy lazy-video right-item image"
+        data-src="https://www.youtube.com/embed/5qap5aO4i9A"></iframe>
+    </div>
   </div>
 
-  <div class="lazy-load">
-    <p class="slide-in left-item text-item">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis fugit,
-      quae beatae vero sit magni quaerat id ratione. Dolor optio unde amet
-      omnis sapiente neque cumque consequuntur reiciendis deserunt.
-      Dolorem vero exercitationem consequuntur, eligendi cupiditate
-      debitis facilis quibusdam magni. Eveniet.
-    </p>
-    <iframe frameborder="0" class="lazy lazy-video right-item"
-      data-src="https://www.youtube.com/embed/5qap5aO4i9A"></iframe>
+
+  <!-- infinite scrolling -->
+  <div class="infinite-container">
+    <div class="infiniteScrolling" id="infinite-wrap">
+    </div>
   </div>
+  <div class="detective"></div>
 
   <script src="./main.js"></script>
 </body>
